{
  "version": 4,
  "terraform_version": "1.13.1",
  "serial": 194,
  "lineage": "17b470c3-0624-42c0-11ba-63a1b303f0af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "node-eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b613dc4cd5c6a413",
            "arn": "arn:aws:ec2:us-east-1:663395718372:elastic-ip/eipalloc-0b613dc4cd5c6a413",
            "domain": "vpc",
            "id": "eipalloc-0b613dc4cd5c6a413",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-52-200-238-32.compute-1.amazonaws.com",
            "public_ip": "52.200.238.32",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "node-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:internet-gateway/igw-04fcec28bf4211b27",
            "id": "igw-04fcec28bf4211b27",
            "owner_id": "663395718372",
            "region": "us-east-1",
            "tags": {
              "Name": "node-gw"
            },
            "tags_all": {
              "Name": "node-gw"
            },
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "node-nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b613dc4cd5c6a413",
            "association_id": "eipassoc-01103ba13a358fc08",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-031e8689ba042f169",
            "network_interface_id": "eni-0353035a135d3136f",
            "private_ip": "10.0.0.99",
            "public_ip": "52.200.238.32",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-06520c9ec51b3b243",
            "tags": {
              "Name": "node-nat"
            },
            "tags_all": {
              "Name": "node-nat"
            },
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:route-table/rtb-098eb19011858164e",
            "id": "rtb-098eb19011858164e",
            "owner_id": "663395718372",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-031e8689ba042f169",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "private-rt"
            },
            "tags_all": {
              "Name": "private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "rtb-098eb19011858164e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:route-table/rtb-09021b140a8b6d151",
            "id": "rtb-09021b140a8b6d151",
            "owner_id": "663395718372",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04fcec28bf4211b27",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public-rt"
            },
            "tags_all": {
              "Name": "public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "rtb-09021b140a8b6d151",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050e4c8383606dbf8",
            "region": "us-east-1",
            "route_table_id": "rtb-098eb19011858164e",
            "subnet_id": "subnet-00a59a3c32e289ac4"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c15af8635967451",
            "region": "us-east-1",
            "route_table_id": "rtb-098eb19011858164e",
            "subnet_id": "subnet-090ec9b791afe0b2d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.node-eip",
            "aws_internet_gateway.node-gw",
            "aws_nat_gateway.node-nat",
            "aws_route_table.private-rt",
            "aws_subnet.private-subnet",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdeed847efc65479",
            "region": "us-east-1",
            "route_table_id": "rtb-09021b140a8b6d151",
            "subnet_id": "subnet-06520c9ec51b3b243"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-050720e20fd68ffa0",
            "region": "us-east-1",
            "route_table_id": "rtb-09021b140a8b6d151",
            "subnet_id": "subnet-0f5285ed0c3a5654f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.node-gw",
            "aws_route_table.public-rt",
            "aws_subnet.public-subnet",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_cluster_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:security-group/sg-07fa75627116101e1",
            "description": "Security group for EKS Cluster",
            "egress": [],
            "id": "sg-07fa75627116101e1",
            "ingress": [],
            "name": "eks_cluster_sg",
            "name_prefix": "",
            "owner_id": "663395718372",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "sg-07fa75627116101e1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:security-group/sg-0d5addd3b24e32a84",
            "description": "node sg",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d5addd3b24e32a84",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow woker node to communcate with cluster",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-07fa75627116101e1"
                ],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "eks_node_sg",
            "name_prefix": "",
            "owner_id": "663395718372",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "sg-0d5addd3b24e32a84",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.eks_cluster_sg",
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:subnet/subnet-00a59a3c32e289ac4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a59a3c32e289ac4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663395718372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-0"
            },
            "tags_all": {
              "Name": "private-subnet-0"
            },
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "subnet-00a59a3c32e289ac4",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:subnet/subnet-090ec9b791afe0b2d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1d",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090ec9b791afe0b2d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "663395718372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "subnet-090ec9b791afe0b2d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:subnet/subnet-06520c9ec51b3b243",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06520c9ec51b3b243",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663395718372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-0"
            },
            "tags_all": {
              "Name": "public-subnet-0"
            },
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "subnet-06520c9ec51b3b243",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:subnet/subnet-0f5285ed0c3a5654f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5285ed0c3a5654f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "663395718372",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0e8dd684318344379"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "subnet-0f5285ed0c3a5654f",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.node-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "node-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:663395718372:vpc/vpc-0e8dd684318344379",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f19517371ed86af6",
            "default_route_table_id": "rtb-0631560e7c24bbca2",
            "default_security_group_id": "sg-01f4eb7131e93348e",
            "dhcp_options_id": "dopt-004b3826d9b106520",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0e8dd684318344379",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0631560e7c24bbca2",
            "owner_id": "663395718372",
            "region": "us-east-1",
            "tags": {
              "Name": "node-vpc"
            },
            "tags_all": {
              "Name": "node-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "663395718372",
            "id": "vpc-0e8dd684318344379",
            "region": "us-east-1"
          }
        }
      ]
    }
  ]
}